# communication

./: CITATION.cff  README.md  entry_points.txt  pyproject.toml  setup.cfg
src/pytest_tno/tno/mpc/communication/: __init__.py  pytest_pool_fixtures.py
src/pytest_tno/tno/mpc/communication/test/: test_fixtures.py
src/tno/mpc/communication/: __init__.py  functions.py  httphandlers.py  pool.py  serialization.py
src/tno/mpc/communication/serializer_plugins/: _register.py  bitarray.py  gmpy.py  int.py  numpy.py  pandas.py  tuple.py
src/tno/mpc/communication/test/: __init__.py  conftest.py  pool_fixtures_http.py  test_packing.py  test_packing_gmpy.py  test_pool_creation.py  test_pool_http_2p.py  test_pool_http_3p.py  test_pool_https_2p.py  test_pool_https_3p.py
src/tno/mpc/communication/test/tls_certs/: README.md  ca-combined.crt  ca-intermediate.crt  ca-intermediate.pem  ca-root.crt  ca-root.pem  ca-untrusted.crt  party_0.crt  party_0.pem  party_1.crt  party_1.pem  party_2.crt  party_2.pem  party_3.crt  party_3.pem  party_4.crt  party_4.pem  party_untrusted.crt  party_untrusted.pem
stubs/: gmpy2.pyi  pyarrow.pyi
tno/mpc/communication/: __init__.py  communication.py  exceptions.py  functions.py  httphandlers.py  pool.py  serialization.py
tno/mpc/communication/serializer_plugins/: __init__.py  _register.py  bitarray.py  gmpy.py  int.py  numpy.py  tuple.py
tno/mpc/communication/test/: __init__.py  pool_fixtures_http.py  test_packing.py  test_packing_gmpy.py  test_pool_creation.py  test_pool_http_2p.py  test_pool_http_3p.py  test_pool_https_3p.py
tno/mpc/communication/test/ssl_certs/: ca.crt  ca.key  party_0.crt  party_0.key  party_1.crt  party_1.key  party_2.crt  party_2.key  party_3.crt  party_3.key  party_4.crt  party_4.key
