[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tno.mpc.communication"
description = "MPC Communication module"
readme = "README.md"
authors = [{name = "TNO PET Lab", email = "petlab@tno.nl"}]
maintainers = [{name = "TNO PET Lab", email = "petlab@tno.nl"}]
keywords = [
    "TNO",
    "MPC",
    "multi-party computation",
    "communication",
]
license = {text = "Apache License, Version 2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
    "Topic :: Security :: Cryptography",
]
urls = {Homepage = "https://pet.tno.nl/", Documentation = "https://docs.pet.tno.nl/mpc/communication/4.8.1", Source = "https://github.com/TNO-MPC/communication"}
dynamic = ["entry-points", "version"]
requires-python = ">=3.8"
dependencies = [
    "aiohttp",
    "mypy_extensions",
    "ormsgpack>=1.1.0",
]

[project.optional-dependencies]
gmpy = [
    "tno.mpc.encryption_schemes.utils[gmpy]",
]
gmpy2 = [
    "tno.mpc.encryption_schemes.utils[gmpy]",
]
bitarray = [
    "bitarray",
]
numpy = [
    "numpy",
]
pandas = [
    "pandas",
    "pyarrow",
]
tls = [
    "pyOpenSSL",
]
tests = [
    "tno.mpc.communication[bitarray,gmpy,numpy,pandas,tls]",
    "pandas-stubs",
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "typeguard",
]

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
entry-points = {file = "entry_points.txt"}
version = {attr = "tno.mpc.communication.__version__"}

[tool.setuptools.package-data]
"*" = ["py.typed"]
"tno.mpc.communication" = ["test/tls_certs/*"]

