[metadata]
name = tno.mpc.communication
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = MPC Communication module
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
   Topic :: Security :: Cryptography
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    communication
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.communication/#files
project_urls =
    Documentation = https://docs.mpc.tno.nl/communication/3.4.1
    Source Code = https://github.com/TNO-MPC/communication
version = attr: tno.mpc.communication.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.mpc.communication
    tno.mpc.communication.test
zip_safe = False
install_requires =
    aiohttp
    mypy_extensions
    ormsgpack>=1.1.0
    typing_extensions
namespace_packages =
    tno
    tno.mpc
include_package_data = True

[options.package_data]
tno.mpc.communication = py.typed
tno.mpc.communication.test =
    ssl_certs/*

[options.extras_require]
bitarray =
    bitarray
gmpy2 =
    tno.mpc.encryption_schemes.utils[gmpy]
numpy =
    numpy
tests =
    bitarray
    numpy
    pytest
    pytest-asyncio
    tno.mpc.encryption_schemes.utils
    typeguard
